--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -134,7 +134,7 @@
                 </div>
             <% end %>
             <div class="px-0 col-sm-2 col-2"><span>Location</span></div>
-            <div class="col-sm-2 col-2"><%= @course.checkIfBlank("location", true) %></div>
+            <div class="col-sm-2 col-2"><%= @course.checkIfBlank("locations_summary", true) %></div>
 
         </div>
         <div class="m-auto py-2 row">
@@ -349,12 +349,12 @@
       </div>
       <div class="col-md-7">
         <div class="h-100 p-5 bg-light border rounded-3">
-          <h3>User Submitted Stats</h3>
+          <h3>User Submitted Stats (<%= @course.course_code %>)</h3>
           <hr>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="card">
-                    <div class="card-body">
+                    <div class="card-body pb-4">
                         <h5 class="card-title">Average Grade</h5>
                         <h3 class="card-text"><%= Course.get_average_grade(@course.course_code)%></h3>
                         <p><%= Course.count_submitted_grades(@course.course_code) %> <%= "response".pluralize(Course.count_submitted_grades(@course.course_code)) %></p>
@@ -366,7 +366,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Gut</h5>
                         <h3 class="card-text"><%= Course.get_percent_yes("is_a_gut", @course.course_code)%></h3>
-                        <p>say Yes (<%= Course.count_review_val("is_a_gut", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("is_a_gut", @course.course_code)) %>)</p>
+                        <p class="card-text mb-0 pb-0">say Yes</p>
+                        <small style="font-size: .8rem">(<%= Course.count_review_val("is_a_gut", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("is_a_gut", @course.course_code)) %>)</small>
                     </div>
                     </div>
                 </div>
@@ -375,7 +376,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Enjoyable</h5>
                         <h3 class="card-text"><%= Course.get_percent_yes("enjoyed_class", @course.course_code)%></h3>
-                        <p><%= Course.count_review_val("enjoyed_class", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("enjoyed_class", @course.course_code)) %></p>
+                        <p class="card-text mb-0 pb-0">say Yes</p>
+                        <small style="font-size: .8rem">(<%= Course.count_review_val("enjoyed_class", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("enjoyed_class", @course.course_code)) %>)</small>
                     </div>
                     </div>
                 </div>
@@ -384,16 +386,18 @@
                     <div class="card-body">
                         <h5 class="card-title">Good Prof</h5>
                         <h3 class="card-text"><%= Course.get_percent_yes("good_prof", @course.course_code)%></h3>
-                        <p><%= Course.count_review_val("good_prof", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("good_prof", @course.course_code)) %></p>
+                        <p class="card-text mb-0 pb-0">say Yes</p>
+                        <small style="font-size: .8rem">(<%= Course.count_review_val("good_prof", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("good_prof", @course.course_code)) %>)</small>
                     </div>
                     </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Good Workload</h5>
                         <h3 class="card-text"><%= Course.get_percent_yes("good_workload", @course.course_code)%></h3>
-                        <p><%= Course.count_review_val("good_workload", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("good_workload", @course.course_code)) %></p>
+                        <p class="card-text mb-0 pb-0">say Yes</p>
+                        <small style="font-size: .8rem">(<%= Course.count_review_val("good_workload", @course.course_code) %> <%= "response".pluralize(Course.count_review_val("good_workload", @course.course_code)) %>)</small>
                     </div>
                     </div>
                 </div>
@@ -421,16 +425,16 @@
                     <label for="gut-question" class="col-form-label">Is <%= @course.course_code %> a gut?</label>
                     <select name="gut" class="form-select" id="gut-question" aria-label="Default select example">
                         <option selected></option>
-                        <option value="1">Yes</option>
-                        <option value="2">No</option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
                     </select>
                 </div>
                 <div class="mb-3">
                     <label for="enjoyed-question" class="col-form-label">Is <%= @course.course_code %> enjoyable?</label>
                     <select name="enjoyed" class="form-select" id="enjoyed-question" aria-label="Default select example">
                         <option selected></option>
-                        <option value="1">Yes</option>
-                        <option value="2">No</option>
+                        <option value="true">Yes</option>
+                        <option value="false">No</option>
                     </select>
                 </div>
                 <div class="mb-3">
@@ -455,7 +459,9 @@
                 </div>
                 <div class="mb-3">
                     <label for="grade-question" class="col-form-label">What grade did you receive for this class?</label>
-                    <select name="grade" class="form-select" id="grade-question" aria-label="Default select example">
+                    <br>
+                    <small class="my-2"><strong>This response is not associated with any user data</strong></small>
+                    <select name="grade" class="form-select mt-2" id="grade-question" aria-label="Default select example">
                         <option selected>N/A</option>
                         <option value="1">A</option>
                         <option value="2">A-</option>
