--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,15 @@
             <nav id="sidebarMenu" class="bg-white col-md-2 col-lg-1 pt-0 d-md-block sidebar collapse">
                <div class="position-sticky pt-2">
                   <div class="text-center justify-content-center">
-                     <%= image_tag('/images/yuts-logo.png', :size => "100x75")%>
-                     <h3 class="px-auto logo"><strong><em>YUTS</em></strong></h3>
+                     <img src="/images/yuts-logo.png" style="max-width:80%; height: auto;">
+                     <p class="px-auto logo dynamic-text-xl"><strong><em>YUTS</em></strong></p>
                   </div>
                   <div class="card text-center mt-3">
                      <div class="card-header py-3">
                         
                      </div>
                      <div class="card-body">
-                        <h5 class="card-title pb-2 border-bottom">Advanced Search</h5>
+                        <p class="pb-2 border-bottom dymanic-text-xs">Advanced Search</p>
                         <form class="form-check form-switch p-0" action="/courses" method="GET">
                            <div class="btn-group dropend sort-dropdown mt-2">
                               <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,7 +49,7 @@
                            </div>
                            <div class="form-check form-switch mt-2">
                               <input name="guts_switch" class="form-check-input pe-0 me-0" type="checkbox" id="flexSwitchCheckDefault">
-                              <span style="font-size: .8rem">Guts Only</span>
+                              <span style="font-size: .75vw">Guts Only</span>
                            </div>
                         </form>
                         <p class="card-text mt-3">Ratings are Coursetable ratings</p>
@@ -88,7 +88,7 @@
                      </ul>
                   </div>
                </div>
-               <div id="main-body">
+               <div id="main-body" class="table-responsive dynamic-text-xs">
                   <table class="table table-striped table-sticky table-hover">
                      <thead id="table-head">
                         <tr>
