--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
                      </ul>
                   </div>
                </div>
-               <div id="main-body" class="table-responsive dynamic-text-xs">
+               <div id="main-body" class="table-responsive dynamic-text-xs" style="overflow-x:auto;">
                   <table class="table table-striped table-sticky table-hover">
                      <thead id="table-head">
                         <tr>
