--- a/app/views/courses/home.html.erb
+++ b/app/views/courses/home.html.erb
@@ -11,7 +11,7 @@
             <div class="row pt-1">
                 <div class="col-9 mx-auto">
                     <p class="lead">
-                        CourseTable just got a new best friend: we've created an algorithm to determine
+                        <a href="https://coursetable.com">CourseTable</a> just got a new best friend: we've created an algorithm to determine
                         the likelihood that a class is a gut, using something we call the Gut Index. Our 
                         algorithm also estimates how tough of a grader a professor is, class difficulty, and
                         percentile rankings for all of the qualifiers in our catalog. Check it out below!
@@ -24,10 +24,10 @@
                     <a class="btn btn-lg btn-primary mr-2" href="/auth/google_oauth2" role="button" >Sign in with Yale Google Account</a>
                 </div>
             </div>
-            <div class="row mt-4">
+            <div class="row mt-3 pt-1">
                 <div class="col-9 mx-auto">
                     <!-- the login route takes user to Google login -->
-                    <h6><strong>A valid Yale email is required to access the catalog</strong></h6>
+                    <h6><strong>A valid Yale NetID is required to access the catalog</strong></h6>
                 </div>
             </div>
         </div>
