--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,6 +93,7 @@
                      </ul>
                   </div>
                </div>
+               <div id="main-body">
                   <table class="table table-striped table-sticky table-hover">
                      <thead id="table-head">
                         <tr>
