--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,18 +39,21 @@
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    white-space: nowrap;
+    width: calc(100px + 2vw) !important;
   }
   
-  @media (max-width: 767.98px) {
-    .sidebar {
-      top: 5rem;
-    }
+  main#mainDiv {
+   
+    margin-left: calc(100px + 2vw) !important;
+    max-width: calc(100vw - (100px + 2.9vw));
   }
   
   .sidebar-sticky {
     position: relative;
     top: 0;
     height: calc(100vh - 48px);
+
     padding-top: .5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
@@ -125,11 +128,11 @@
     /* font-style: bold; */
   }
   .dynamic-text-xl {
-    font-size: 1.5vw;
+    font-size: calc(20px + .4vw);
   }
 
   .dynamic-text-lg {
-    font-size: calc(8px + .5vw);
+    font-size: calc(9px + .6vw);
   }
 
   .dynamic-text {
@@ -137,11 +140,15 @@
   }
 
   .dynamic-text-sm {
-    font-size: calc(8px + .5vw);
+    font-size: calc(8px + .27vw);
   }
 
   .dynamic-text-xs {
-    font-size: calc(8px + .5vw);
+    font-size: calc(8px + .3vw);
+  }
+
+  .dynamic-text-xxs {
+    font-size: calc(8px + .15vw);
   }
 
   .x-scroller{
