--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,8 @@
 
                            </div>
                            
-                           <div class="form-check form-switch mt-1">
-                              <input name="guts_switch" class="form-check-input ps-0 ms-0" type="checkbox" id="flexSwitchCheckDefault">
+                           <div class="form-check form-switch mt-1 d-flex justify-content-center">
+                              <input name="guts_switch" class="form-check-input"  type="checkbox" id="flexSwitchCheckDefault">
                               
                            </div>
                         <%# <p class="card-text mt-3">Ratings are Coursetable ratings</p>
